Fix multilingual name extraction for Hindi/Urdu voice input
- Added Unicode patterns for Devanagari script (मर नम X ह)
- Added patterns for common STT errors (मर नम instead of मर नम)
- Added Hindi script versions of common Indian names
- Added conversation history scanning for missed name extraction
- Updated system prompt to NEVER ask for name
- Bot now uses 'aap' when name is unknown instead of asking
- Increased skip words to include Hindi script versions

--- a/.env.example
+++ b/.env.example
@@ -1,16 +1,35 @@
-# Google Gemini API
-GEMINI_API_KEY=AIzaSyCiVADCFuIojbS9bA-SypCYh6hrii-J100
+# ===== LLM PROVIDERS =====
+# Groq (RECOMMENDED - Free, fast, Llama 3.3 70B)
+GROQ_API_KEY=your_groq_api_key_here
 
-# Server Config
+# Google Gemini (Alternative)
+GEMINI_API_KEY=your_gemini_api_key_here
+
+# LLM Provider Selection: "groq" (default) or "gemini"
+LLM_PROVIDER=groq
+
+# ===== TTS PROVIDERS (in order of quality) =====
+# Azure Speech (BEST for Hinglish - SSML + phonemes + neural voices)
+AZURE_SPEECH_KEY=your_azure_speech_key_here
+AZURE_SPEECH_REGION=centralindia
+
+# ElevenLabs (Great natural voices)
+ELEVENLABS_API_KEY=your_elevenlabs_api_key_here
+
+# TTS Provider Selection: "azure" (default), "elevenlabs", or "browser"
+TTS_PROVIDER=azure
+
+# ===== SERVER CONFIG =====
 HOST=127.0.0.1
 PORT=8000
 DEBUG=true
 
-# Whisper Model (tiny, base, small, medium, large)
+# ===== WHISPER (Speech Recognition) =====
+# Models: tiny, base, small, medium, large
 WHISPER_MODEL=small
 
-# TTS Provider (browser, google)
-TTS_PROVIDER=browser
-
-# Session Config
+# ===== SESSION & MEMORY =====
 SESSION_TIMEOUT_MINUTES=30
+
+# MCP Memory (persistent context across conversations)
+MCP_ENABLED=true
