feat: Major improvements for production-ready SamairaAI
- Fixed repeated self-introductions issue (LLM no longer re-introduces after turn 1)
- Added postprocess.py for response cleaning and intro stripping
- Improved Hinglish transcription with hallucination filtering
- Added faster-whisper ASR service for low-latency transcription
- Added WebRTC VAD service for voice activity detection
- Implemented real-time WebSocket voice streaming pipeline
- Added session persistence across server restarts
- Enhanced microphone error handling with user-friendly messages
- Added IMPLEMENTATION_SUMMARY.md and MICROPHONE_TROUBLESHOOTING.md
- Updated system prompt to prevent re-introductions
- Added real-time voice UI components and styling
- Updated requirements.txt with new dependencies

--- a/requirements.txt
+++ b/requirements.txt
@@ -10,8 +10,13 @@ httpx==0.26.0  # For Groq API calls
 
 # Speech Processing
 openai-whisper==20231117
+faster-whisper==1.0.3  # Optimized Whisper with CTranslate2
+webrtcvad==2.0.10  # Voice Activity Detection
 soundfile==0.12.1
 numpy==1.26.3
+
+# Edge TTS for free, high-quality voice synthesis
+edge-tts==6.1.9
 
 # HTTP & Async
 python-multipart==0.0.6
